--- a/cuda-neural-network/CMakeLists.txt
+++ b/cuda-neural-network/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 # nvcc -I /usr/local/cuda/include -L /usr/local/cuda/lib main.cu .... -std=c++11 -D_MWAITXINTRIN_H_INCLUDEDcudaMalloc
 
-set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
-add_definitions("-D_MWAITXINTRIN_H_INCLUDED")
 find_package(CUDA REQUIRED)
+find_package(Eigen3 REQUIRED)   
+
+# set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
+set (CUDA_SEPARABLE_COMPILATION ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+add_definitions("-D_MWAITXINTRIN_H_INCLUDED")
 
 include_directories(include)
 
@@ -11,6 +16,7 @@ file(GLOB
     SRC_FILES
     src/layers/*.cu
     src/nn_utils/*.cu
-    src/*.cu)
+    src/*.cu
+    src/main.cpp)
 
 cuda_add_executable(main ${SRC_FILES})
